<resources>
    <string name="app_name">MothBallStepOne</string>
    <string name="hello_world">Hello, MothBall Step 1</string>
    <string name="action_settings">Settings</string>

    <string name="main_title_image_description">Title Menu Image</string>
    <string name="moth_content_description">Moth icon</string>
    <string name="three_strikes_content_description">Three Strikes</string>

    <string name="start_button_text">Start</string>
    <string name="instructions_button_text">Instructions</string>
    <string name="back_button_text">Back</string>

    <string name="instructions_text_1">&#8226;Tap to the left of the ball\'s lane to move left.</string>
    <string name="instructions_text_2">&#8226;To move right, tap to the right.</string>
    <string name="instructions_text_3">&#8226;Collect moths for points:</string>
    <string name="instructions_text_4">&#8226;Avoid blocks.</string>
    <string name="instructions_text_5">&#8226;Three strikes, and you\'re out:</string>

    <string name="personal_best_key">best</string>
    <string name="player_score_key">player_score</string>

    <string name="your_score_text">Score:</string>
    <string name="score_text">Error.</string>
    <string name="your_best_text">Best:</string>
    <string name="again_button_text">Play Again</string>
    <string name="main_menu_button_text">Main Menu</string>
    <string name="quit_button_text">Quit</string>

</resources>