<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context="org.vkedco.mobappdev.wagner.mothball_step_one.mothballstepone.EndActivity" >

    <TextView
        android:id="@+id/your_score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/your_score_text"
        android:textSize="28sp"
        android:textColor="#ffffff"
        android:background="@android:color/transparent"
        android:gravity="left" />

    <TextView
        android:id="@+id/score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/score_text"
        android:textSize="12sp"
        android:textColor="#0060ff"
        android:shadowColor="#ffffff"
        android:background="@android:color/transparent"
        android:shadowRadius="24"
        android:gravity="right" />

    <TextView
        android:id="@+id/your_best_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/your_score_tv"
        android:text="@string/your_best_text"
        android:textSize="28sp"
        android:textColor="#ffffff"
        android:background="@android:color/transparent"
        android:gravity="left" />

    <TextView
        android:id="@+id/best_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:gravity="right"
        android:shadowColor="#ffffff"
        android:shadowRadius="24"
        android:text="@string/score_text"
        android:textColor="#0060ff"
        android:textSize="12sp" />

    <Button
        android:id="@+id/again_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        android:textColor="#ffffff"
        android:text="@string/again_button_text"
        android:background="@drawable/button_outline_tsp" />


    <Button
        android:id="@+id/main_menu_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:textColor="#ffffff"
        android:text="@string/main_menu_button_text"
        android:background="@drawable/button_outline_tsp" />



</RelativeLayout>